==Release 1.6 (TBD)==

===Additions and enhancements===

To the reproducible documents collection:

* gallery: migration gallery
* Moved jsg to tccs
* tccs/buttefly: A fast butterfly algorithm for generalized Radon
  transforms (Hu, Fomel, Demanet, and Ying)
* tccs/opwd: Omnidirectional plane-wave destruction (Chen, Fomel, and
  Lu)

To SCons:

To documentation:

To APIs:

To the Python package:

* fftw (if present) is included in core libraries during compilation

* Cygwin no longer provides libtirpc, removed it from configure 

To programs:

* Added shift= parameter to sfkolmog
* Added eps= parameter to sflsfit
* user/fbroggin: New contributor (Filippo Broggini)

===Bug fixes===

In the reproducible documents collection:

In documentation:

In APIs:

* Look for mex in matlab's directory to avoid confusion with other
  programs named mex

In the Python package:

In programs:
sfbyte: "clip" determination when the first plane is zero (aklokov)
Fixed size definitions in sfinttest1

In the build system:

===Changes in defaults and interfaces===

==Release 1.5 (2013-07-24)==

===Additions and enhancements===

To the reproducible documents collection:

* jsg/fpwd: Accelerated plane-wave destruction (Chen, Fomel, and Lu)
* swag/tau: Wavefield extrapolation in pseudodepth domain (Ma and
  Alkhalifah)
* jsg/lfd: Lowrank finite-differences and lowrank Fourier
finite-differences for seismic wave extrapolation in the acoustic
approximation (Song, Fomel, and Ying)
* sep/waverays: Wavefront construction using waverays (Urdaneta)
* swag/itime: Automatic traveltime picking using the instantaneous
  traveltime (Saragiotis, Alkhalifah, and Fomel)
* trip/test: Extended modeling in Madagascar (Liu and Symes)
* uwa/geo2013ElasticModellingGPU: Solving 3D anisotropic elastic wave
  equations on parallel GPU devices (Weiss and Shragge)
* jsg/eikods: Kirchhoff migration using eikonal-based computation of
  traveltime source-derivatives (Li and Fomel)