@@ -1,0 +1,95 @@
+{
+ "metadata": {
+  "name": "Madagascar Test"
+ },
+ "nbformat": 3,
+ "nbformat_minor": 0,
+ "worksheets": [
+  {
+   "cells": [
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": "Editing SConstruct"
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "You can edit SConstruct files inside an IPython notebook using <code>%%file</code>"
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "%%file SConstruct\n#\n# Setting up\n#\nfrom rsf.proj import *\n \n#\n# Make filter.rsf\n#\nFlow('filter',None,\n     'spike n1=1000 k1=300 | bandpass fhi=2 phase=1')\n \n#\n# Make filter.vpl\n#\nResult('filter',\n       'wiggle clip=0.02 title=\"Welcome to Madagascar\"')\n\nEnd()",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": "Overwriting SConstruct"
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": "\n"
+      }
+     ],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": "Running SCons"
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": "After running SCons through a shell escape, you can display images inline using <code>m8r</code> API"
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "!scons -Q",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": "/Users/sergey/RSFROOT/bin/sfspike n1=1000 k1=300 | /Users/sergey/RSFROOT/bin/sfbandpass fhi=2 phase=1 > filter.rsf\r\n< filter.rsf /Users/sergey/RSFROOT/bin/sfwiggle clip=0.02 title=\"Welcome to Madagascar\" > Fig/filter.vpl\r\n"
+      }
+     ],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "import m8r\nm8r.Vplot('Fig/filter.vpl',penopts='ppi=60')",
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAmYAAAHMCAIAAADwIfPIAAAQN0lEQVR4nO3d3ZqiuAKGUdhP3/8t\nsw+YZhj+/FCUhKx11G2VmqIsXxNA+2EYOgDglf/dPQAAqINkAkBEMgEgIpkAEJFMAIhIJgBEJBMA\nIpIJABHJBICIZAJARDIBICKZABCRTACISCYARCQTACKSCQARyQSAiGQCQEQyASAimQAQkUwAiEgm\nAEQkEwAikgkAEckEgIhkAkBEMgEgIpkAEJFMAIhIJgBE/tw9AJ6g7/v5f4dhGC+c/rH+6tmbza9V\ntfFH/t4P+3KTXrvNG/wN8mySyQUWjTz11eRmrxgjXRdv0qvy5jfIw1iYhUatS6ZtcEwyudL0nDv+\nY/5f63JA7SzMcplhGBb7rpJZy4e7u8KrT992vANvsZA4/+bjWzg7nuPrhqN94y7mVzw7p8zvN9xW\nn9zm5k7fsw+G7nCvwbUPre7w0UUtJJM7LZ74zk5Gw6vPL998qp2ey9Y32P2ty/Et7I1n7zs3TRl7\n+QT99l2sb22x9fY6uti2B7+p+ZCOq3zqNhc/cnJr3daW2fy245/iYGz5Q6tbbRlLLzWyMMttxqeM\n+bPGqalPePXFE9PxU/n6BvNbWD9jXv6EuHcX394Hub79vd/UYoSL7fn2ba5/5INbnn/bS8lLn2ls\ni+GdPRR8GrN9xvWSTK6XzB4OnjXOLuceXLj5bd942no59bzK+i7e/nFOTX+Tbz415Q1vM/f2xt9c\n3V1fuLnlTz2wF1c0xayRhVkudvxK/PibP/TG/rlr1Th7CJcHv/GjXX6b4Q2u9yYmE8Szr/x4JMnk\nTpe/0L73lXu984bjcL481ua9e7z2Ntc/wsEaQ7e16/rYXi+TPaM8hoVZrrR57APFOrU2e+O9z1MU\nrskn9z4/Eufs1T888IpKSSbXS8L54XPNJwd3XDKAzVv7wSQjOezo89t8z5d2Eo9t6//6cC/g+pid\ng2NcYUEyKct7L/nnV7/key506u7Wz9ffHu10AOqpa/1+1+bth8x8+MjkGZwYxMXyk+26nTMNwq8m\n3/De7WzOM/YmHy93ZX1Yo1P759678X7njMz5br/1l9YH0RyM8JPb/OS3vL7BcAMmd5rcYzh4aiGZ\nQLn2ct5pD3eQTKBQe0sUexNc+Db7MoHKeB8A7mKWCZTr4A0EPHfxe5IJFM0RNJRDMgEgYl8mAEQk\nEwAikgkAEckEgIhkAkBEMgEg4iOmT/NpBgDfU/Kpj5L5jpJ/o3N919Ux0K7rqhptRUPtqhptRUPt\nqhptTUMte05iYRYAIpIJABHJBICIZAJARDIBICKZABCRTACISCYARCQTACKSCQARyQSAiGQCQEQy\nASAimQAQkUwAiEgmAEQkEwAif+4eAFRv+hj5oZZPvgfeYpYJH+n7bhj+ieXUTuCRJBOuYYoJjyeZ\n8L5xijkZBhNNeDLJBICIZMKVTDThwSQT3rRYlQUeTzIBICKZABCRTHiHVVlokGTCxRwBBE8lmQAQ\nkUx4h1VZaJBkAkBEMuF6dmfCI0kmAEQkEwAikgnnWHGFZkkmfIXdmfA8kgkAEckEgIhkAkBEMuEE\n78YOLZNMAIhIJnyLg2bhYSQTACKSCQCRP3cPoAj93+WzwaEdAOxocZbZ/3f/0vy/vV1PAOxofZbZ\n9/1iZrm+BAC6NmeZ3eFschgGc002vXFSpoNm4UkaTSYAnCWZABBpN5nr1dfxEvsyAdjU4uE/UxHX\njbQXE4A9LSZzsphNmlwCcKDdhVk4xWeYAJIJABHJXLI7E4BNTe/L3LM4aFZE+cT4bgYWdeEBJHPD\n8WFBCgrQJguzS46bBWCTZAJARDLhNTsjga7lfZl7uyQtzAKwqdFkTr1cHxnrPWYB2NTiwuyYxmEY\n1kfGjpc4JpZr+dRMeIYWk9kdrr6aYgKwqdFkAsBZLSZzGIaDpVf7MllwuCwwavTwn4Nq6iUAmxpN\nZvc3jfNwiiUAB9pN5kgmAQi1uC8Tfs95JvAAkgkAEckEgIhkwhFnmAATyQSAiGQCQEQyASAimfAj\nzjOB2kkmAEQkEwAikgm7nGECzEkmAEQkEwAikgkAEckEgIhkwu84NROqJpkAEJFMAIhIJgBEJBMA\nIpIJABHJhG3eLQ9YkEwAiEgmAEQkEwAikgkAEckEgIhkwk95m1mol2TCBmeYAGuSCQARyQSAiGQC\nQEQyASAimQAQkUwAiEgmLH37DBOnZkKlJBMAIpIJABHJBICIZAJARDIBICKZABCRTPgPn2EC7JFM\nuIFTM6FGkgkAEckEgIhkAkBEMgEgIpnwL4fLAgckEwAikgkAEcmEezg1E6ojmQAQkUwAiEgmAEQk\nEwAikgkAEckEgIhkwj+89Q9wTDLhNk7NhLpIJgBEJBMAIpIJABHJhK5z7A8QkEwAiEgmAEQkEwAi\nkgl3cmomVEQyASAimeBwWSAimQAQkUwAiEgmAEQkEwAikknrHPsDhCQTACKSCQARyQSAiGTStBJ2\nZHrPPKiFZAJARDIBICKZABCRTNpVwo5MoCKSCQCRP3cPALjZ5vG65t+wJpnQtLGXi0D2vVVr2GBh\nFu5316mZYxfXaRwvdLYoLEgmjTKLerkFVBMWJBPYpZowJ5nQonySrZowkUxa1Piq7NkEqiaMJBNa\ndPYVg2pCJ5nQmrdn2KoJkklzylyVFSQon2RCQz58uaDrNE4yaUuZU8yKqCYta/0N8/rZX//gqfTp\nGn+uv/DlglcetKndZParp8/xEuF8Nr/ez40TzXurufjz9WvlNxpNZt/3e2k8+BJVM8W88HH9+2qu\nf33zu/ZhLPxGi8k8juIwDKr5PJuf11GasUOFD3Lys52a070cbJn1l8aiH3wDvKHFZJ61tYR7y0DO\nq+tIjW+O1jPml3yv8UkpD6w/zuzgq5f49t/atWO+5ZnhAX+GkvnaYsbZ930tv/i+qsdoXaOl+9ry\n7Iex3LRYxT1e5t2zvNbqRd73HsCbYz5h6/Xo7//canoFv6PFZB4vvVqV5Xm+Nxe8vJo/WEJ/uYob\nXveXL/I+vKNCXo++87qkMC0ms/tbzb0v/XgwULVLqvnPn+PW513/gD96Qo0ms/ubRudl0oJvP7TH\n23+7mtPMsuwJBjSczJFMwlXeOOK3iiOZYdJ6MqEodZ1nsjadeXL8I3zjAB/4AcmEJ+v7rvttlqZF\n2vl//x1Mt3E51EIygetNRfTOdjyJZAJfpJE8iQ//gseqercoFEgyoSw+kBKKJZkAEJFMeCarsnA5\nyQSAiGTCA5liwjdIJgBEJBMAIpIJABHJhOI4NRPKJJnwNI79gS+RTACISCYARCQTSvT27kyrsvA9\nkgkAEcmE5zDFhK+STACISCYUytmZUBrJhIewKgvfJpkAEJFMAIhIJpQr351pVRZ+QDIBICKZABCR\nTChasjZrVRZ+QzIBICKZUDdTTPgZyYTSeRsgKIRkQsVMMeGXJBMAIpIJFdhcmzXFhB+TTKjGvJp6\nCb/35+4BAJFxouk4ILiRZEI1TCvhXhZmASAimQAQkUwAiEgmAEQkEwAikgkAEckEgIhkAkBEMgEg\nIpkAEJFMAIhIJgBEJBMAIpIJABHJBICIZAJARDIBICKZABCRTACISCYARCQTACKSCQARyQSAiGQC\nQEQyASAimQAQkUwAiEgmAEQkEwAikgkAEckEgIhkAkBEMgEgIpkAEJFMAIhIJgBEJBMAIpIJABHJ\nBICIZAJARDIBICKZABCRTACISCYARCQTACKSCQARyQSAiGQCQEQyASAimQAQkUwAiEgmAET+3D2A\nIvR9P/5jGIZ7RwJAsVqcZU6BXP938SUAmLQ+y+z7fjGzXF8CAF2bs8zucDY5DIO5JgBrjSYTAM6S\nTACItJvM9erreIl9mQBsavHwn6mI60baiwnAnhaTOVnMJk0uATjQ7sIsAJwimQAQkcwluzMB2CSZ\nG1QTgDXJ3OA4IADWJHNJLwHYJJkAEJFMAIi0+1YGe8f4WJgFYFOjyZx6OQ+k95gF4ECLyRzTuO7i\neEnf94tqOucEgK7NZHaHq6/rj5hefLOCArTJ4T8AEGkxmet55Jx9mQBsandh1hGzAJzSaDK72cE+\ni0sAYFO7yRzJJAChFvdlAsAbJBMAIpLZdU61BCAgmQAQkUwAiEgmAEQkEwAikgkAEckEgIhkAkBE\nMgEgIpkAEJHMrvPm7AAEJBMAIpIJABHJBICIZAJARDIBICKZABCRTACISCYARCQTACKSCQARyQSA\niGQCQEQyASAimQAQkUwAiEgmAEQkEwAikgkAEckEgIhkAkBEMgEgIpkAEJFMAIhIJgBEJBMAIpIJ\nABHJBICIZAJARDIBICKZABCRTACISCYARCQTACKSCQARyQSAiGQCQEQyASAimQAQ6YdhuHsMlen7\n/u4hADxWyVX6c/cAqlTyb3Su72t6SVTRaCsaalfVaCsaalfVaCsaauEszAJARDIBICKZABCRTACI\n2CcMABGzTACISCYARJyXec70PgblLGiPQwrHs34fhnJ+kK68s8fy8ZS5YeejKmE83fkh2bChZ2zY\n8knmCfMn0EKe3KdhnArnqITxz5X2tkpvj6eQDbt4iL7xCLnch0OyYfesh1T1U0HJJDO1eBQOw3B7\nNecDGMeTDKnAP4/SYtm9NaSiNuzmHCJ8hPx4SC+vWMWGvWUwo817r/SpoHz2ZTbk9sbvGYahtIGd\nGlKxG7Z2NuyX2LBvM8uM7L2KrO41++Ib/NlcpbQNux7A7euHe0M6VsuGvdHmNnm5oUrbsLWQzLYs\n/jC82LxKyRu26mPWit2whR8B9FKxG7ZwFmYbsvkncftr5AcoecNOcSrnCXF8dn6jl9PVvzCo04aZ\n0obUvdpKJW/YwkkmPFYep5956mymqN48cgsXQjIjew/BuvYMjQdMfm1E7Spzw27G6fZjO9frgcff\nX9qGfcaQCvwpaiGZbVk/h3pBeonSNuz4hFjUM+M0pFPXKm3DPoYN+x6H/6QWJ2KWsL40H9L6eIrN\ngz5K+xFqVMuGnR4Y5RyocrybrYoNu95zWcKhyJtDWv+35A1bC1vqnLoOPjxemivtR5i7fWzHh+CX\nv2E336Gmu3Vsi+fozfGUv2FH5bwKmRwPqZYNWz7JBICIfZkAEJFMAIhIJgBEJBMAIpIJABHJBLaF\nbztQzrslwLdJJrAhP729nPclh29zXib81F5d9t6Z5RZvDOD2McMPmGXCr80/XWT9SSNmbFAsyYSy\n3P5xXW/PF8Wex5NMAIj4JBP4qc0J3MH7ledTt5efjpnMHV9+zMjerTkIiBZIJhRk/fFY0yXHH/ox\nfsjX8TFEn6y42uEKnWTCI12eNB8UBZ1kwoNdFc753Pf2T1SGG0kmPNa1YVuEUzVpkCNm4YE2e5ZM\nOl9ece8cGHs3aYFkwjMtDmH9cF6oiNB5wzy4xfqY2PXl3daZGy8v2Tu09dRf+ubBtwf3sr4KPJJH\nObDkPWZhk4VZYOns+xLoJY2QTACISCawIZ9ommLSDo91AIiYZQJARDIBICKZABCRTACISCYARCQT\nACKSCQARyQSAiGQCQEQyASAimQAQkUwAiPwfnNZj8N273c0AAAAASUVORK5CYII=\n",
+       "prompt_number": 15,
+       "text": "<m8r.Vplot at 0x105e2c4d0>"
+      }
+     ],
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": "",
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    }
+   ],
+   "metadata": {}
+  }
+ ]
+}
